--- a/Microsoft.Toolkit.Uwp.UI.Controls.Design/Properties/Resources.resx
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Design/Properties/Resources.resx
@@ -126,6 +126,9 @@
   <data name="CategoryCommon" xml:space="preserve">
     <value>Common</value>
   </data>
+  <data name="CategoryDropShadow" xml:space="preserve">
+    <value>Drop Shadow</value>
+  </data>
   <data name="CategoryInteractions" xml:space="preserve">
     <value>Interactions</value>
   </data>
