Added remaining class metadata

--- a/Microsoft.Toolkit.Uwp.UI.Controls.Design/Properties/Resources.resx
+++ b/Microsoft.Toolkit.Uwp.UI.Controls.Design/Properties/Resources.resx
@@ -135,6 +135,24 @@
   <data name="CategoryLayout" xml:space="preserve">
     <value>Layout</value>
   </data>
+  <data name="CategoryMarkdownCodeStyle" xml:space="preserve">
+    <value>Markdown Style - Code</value>
+  </data>
+  <data name="CategoryMarkdownHeaderStyle" xml:space="preserve">
+    <value>Markdown Style - Header {0}</value>
+  </data>
+  <data name="CategoryMarkdownListStyle" xml:space="preserve">
+    <value>Markdown Style - List</value>
+  </data>
+  <data name="CategoryMarkdownQuoteStyle" xml:space="preserve">
+    <value>Markdown Style - Quote</value>
+  </data>
+  <data name="CategoryMarkdownStyle" xml:space="preserve">
+    <value>Markdown Style</value>
+  </data>
+  <data name="CategoryMarkdownTableStyle" xml:space="preserve">
+    <value>Markdown Style - Table</value>
+  </data>
   <data name="CategoryText" xml:space="preserve">
     <value>Text</value>
   </data>
