Added Related Topics section

--- a/docs/.template.md
+++ b/docs/.template.md
@@ -11,6 +11,11 @@ keywords: windows 10, uwp, uwp community toolkit, uwp toolkit, your control name
 The [Control Name](API-Link) ...
 <!-- You can get your API link from https://docs.microsoft.com/en-us/dotnet/api/?term=uwp. Make sure you remove the "?view=uwp-toolkit-x.x.x" from the end of the URL eg: https://docs.microsoft.com/en-us/dotnet/api/microsoft.toolkit.uwp.helpers.printhelper -->
 
+<!-- Use below format to display note
+> [!NOTE]
+Some note
+-->
+
 ## Syntax
 
 **XAML**
@@ -81,4 +86,11 @@ The [Control Name](API-Link) ...
 
 ## API Source Code
 
-* [control/helper name source code](source-code-link)
+- [control/helper name source code](source-code-link)
+
+## Related Topics
+
+<!-- Optional -->
+
+- [Topic 1](link)
+- [Topic 2](link)
