Fixed as per review and added Events section

--- a/docs/.template.md
+++ b/docs/.template.md
@@ -1,7 +1,6 @@
 ---
 title: 
 author: GitHub_UserName
-ms.date: mm/dd/yyyy
 description: describe your control in one sentence
 keywords: windows 10, uwp, uwp community toolkit, uwp toolkit, your control name 
 ---
@@ -45,12 +44,21 @@ Some note
 
 ## Methods
 
-<!-- Explain all properties in a table format -->
+<!-- Explain all methods in a table format -->
 
 | Methods | Return Type | Description |
 | -- | -- | -- |
 | A(int) | bool | Description |
 | B(float, string) | int | Description |
+
+## Events
+
+<!-- Explain all events in a table format -->
+
+| Events | Description |
+| -- | -- |
+| A | Description |
+| B | Description |
 
 ## Examples
 
